@@ -32,7 +32,7 @@ GNOME_PLATFORM_GNOME_2(yes)
 
 GLIB_REQUIRED=1.3.1
 XML_REQUIRED=2.2.8
-ART_REQUIRED=2.3.4
+ART_REQUIRED=2.3.5
 GTK_REQUIRED=1.3.7
 GDK_PIXBUF_REQUIRED=1.3.7
 FREETYPE_REQUIRED=2.0.1
